--- a/examples/00_simple_map.html
+++ b/examples/00_simple_map.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Добавление метки с собственным изображением</title>
+    <title>Простое отображение карты</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- <script 
-        src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<ваш API-ключ>" type="text/javascript"></script> -->
     <script 
-        src="yMap_API.js" type="text/javascript"></script>
+        src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<ваш API-ключ>" type="text/javascript"></script>
+    </script>
     <script type="text/javascript">
         var myMap;
         // Дождёмся загрузки API и готовности DOM.
@@ -18,8 +17,8 @@
             myMap = new ymaps.Map('map', {
                 // При инициализации карты обязательно нужно указать
                 // её центр и коэффициент масштабирования.
-                center: [55.76, 37.64], // Москва
-                zoom: 10
+                center: [57.910144, 59.981320], // Нижний Тагил
+                zoom: 12 // чем больше, тем ближе
             }, {
                 searchControlProvider: 'yandex#search'
             });
@@ -27,7 +26,10 @@
     </script>
 	<style>
         html, body, #map {
-            width: 100%; height: 100%; padding: 0; margin: 0;
+            width: 100%; 
+            height: 100%; 
+            padding: 0; 
+            margin: 0;
         }
     </style>
 </head>
