--- a/examples/01_mark.html
+++ b/examples/01_mark.html
@@ -3,16 +3,38 @@
 <head>
     <title>Добавление метки на карту</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<ваш API-ключ>" type="text/javascript"></script> -->
     <script 
-        src="yMap_API.js" type="text/javascript"></script>
+        src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=<ваш API-ключ>" type="text/javascript"></script>
+    </script>
     <script type="text/javascript">
         ymaps.ready(init);
 
 function init() {
+    // Для отображения элементов на карте, необходимо их сначала создать,
+    // а затем разместить на карте.
+    // Для создания меток, создадим карту *myMap*
+    // А далее создаем объекты, например, через метод *GeoObject*:
+    // geo = myMap.GeoObject(...)
+
+    // или через метод *Placemark*:
+    // pmark = myMap.Placemark(...)
+
+    // После того, как объекты созданы, добавляем их в 
+    // коллекцию *geoObjects* нашей карты:
+    // myMap.geoObjects.add(geo)
+    // myMap.geoObjects.add(pmark)
+
+    // или вот так:
+    // myMap.geoObjects.add(geo).add(pmark)
+
+    // и даже вот так (JS не обращает внимание на отступы):
+    // myMap.geoObjects
+    //     .add(geo)
+    //     .add(pmark)
+
     var myMap = new ymaps.Map("map", {
-            center: [55.76, 37.64],
-            zoom: 10
+            center: [57.910144, 59.981320],
+            zoom: 12
         }, {
             searchControlProvider: 'yandex#search'
         }),
@@ -22,13 +44,13 @@ function init() {
             // Описание геометрии.
             geometry: {
                 type: "Point",
-                coordinates: [55.8, 37.8]
+                coordinates: [57.910144, 59.981320]
             },
             // Свойства.
             properties: {
                 // Контент метки.
-                iconContent: 'Я тащусь',
-                hintContent: 'Ну давай уже тащи'
+                iconContent: 'Я тащусь', // отображается всегда
+                hintContent: 'Ну давай уже тащи' // отображается если кликнуть
             }
         }, {
             // Опции.
@@ -37,9 +59,7 @@ function init() {
             // Метку можно перемещать.
             draggable: true
         }),
-        myPieChart = new ymaps.Placemark([
-            55.847, 37.6
-        ], {
+        myPieChart = new ymaps.Placemark([ 57.94128703941963, 60.02183208496096 ], {
             // Данные для построения диаграммы.
             data: [
                 {weight: 8, color: '#0E4779'},
@@ -67,48 +87,48 @@ function init() {
     myMap.geoObjects
         .add(myGeoObject)
         .add(myPieChart)
-        .add(new ymaps.Placemark([55.684758, 37.738521], {
+        .add(new ymaps.Placemark([ 57.9098698939751, 60.03522167236329 ], {
             balloonContent: 'цвет <strong>воды пляжа бонди</strong>'
         }, {
             preset: 'islands#icon',
             iconColor: '#0095b6'
         }))
-        .add(new ymaps.Placemark([55.833436, 37.715175], {
+        .add(new ymaps.Placemark([ 57.87714483441992, 60.02526531249999 ], {
             balloonContent: '<strong>серобуромалиновый</strong> цвет'
         }, {
             preset: 'islands#dotIcon',
             iconColor: '#735184'
         }))
-        .add(new ymaps.Placemark([55.687086, 37.529789], {
+        .add(new ymaps.Placemark([ 57.875681563786685, 59.95728740722654 ], {
             balloonContent: 'цвет <strong>влюбленной жабы</strong>'
         }, {
             preset: 'islands#circleIcon',
             iconColor: '#3caa3c'
         }))
-        .add(new ymaps.Placemark([55.782392, 37.614924], {
+        .add(new ymaps.Placemark([ 57.91060083868804, 59.87180004150388 ], {
             balloonContent: 'цвет <strong>детской неожиданности</strong>'
         }, {
             preset: 'islands#circleDotIcon',
             iconColor: 'yellow'
         }))
-        .add(new ymaps.Placemark([55.642063, 37.656123], {
+        .add(new ymaps.Placemark([ 57.9312438601423, 59.88724956542968 ], {
             balloonContent: 'цвет <strong>красный</strong>'
         }, {
             preset: 'islands#redSportIcon'
         }))
-        .add(new ymaps.Placemark([55.826479, 37.487208], {
+        .add(new ymaps.Placemark([ 57.96154741086574, 59.92707500488284 ], {
             balloonContent: 'цвет <strong>фэйсбука</strong>'
         }, {
             preset: 'islands#governmentCircleIcon',
             iconColor: '#3b5998'
         }))
-        .add(new ymaps.Placemark([55.694843, 37.435023], {
+        .add(new ymaps.Placemark([ 57.96574406928076, 60.02320537597658 ], {
             balloonContent: 'цвет <strong>носика Гены</strong>',
             iconCaption: 'Очень длиннный, но невероятно интересный текст'
         }, {
             preset: 'islands#greenDotIconWithCaption'
         }))
-        .add(new ymaps.Placemark([55.790139, 37.814052], {
+        .add(new ymaps.Placemark([ 57.94822431557406, 60.08122692138674 ], {
             balloonContent: 'цвет <strong>голубой</strong>',
             iconCaption: 'Очень длиннный, но невероятно интересный текст'
         }, {
